[gd_scene load_steps=2 format=3 uid="uid://brm1uk7iaq4dk"]

[ext_resource type="Script" uid="uid://b18w222dwgo4b" path="res://scripts/inventory/inventory_slot.gd" id="1_l3fr4"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(64, 64)
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_l3fr4")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
